fix: TT-370 logout button not visible

--- a/src/app/modules/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/modules/shared/components/sidebar/sidebar.component.scss
@@ -1,79 +1,86 @@
 @import '../../../../../styles/colors.scss';
-
 body {
-  overflow-x: hidden;
+    overflow-x: hidden;
 }
 
 #sidebar-wrapper {
-  min-height: 100vh;
-  margin-left: -15rem;
-  -webkit-transition: margin 0.25s ease-out;
-  -moz-transition: margin 0.25s ease-out;
-  -o-transition: margin 0.25s ease-out;
-  transition: margin 0.25s ease-out;
+    min-height: 100vh;
+    margin-left: -15rem;
+    -webkit-transition: margin 0.25s ease-out;
+    -moz-transition: margin 0.25s ease-out;
+    -o-transition: margin 0.25s ease-out;
+    transition: margin 0.25s ease-out;
 }
 
 #sidebar-wrapper .sidebar-heading {
-  padding: 0.875rem 1.25rem;
-  font-size: 1.2rem;
+    padding: 0.875rem 1.25rem;
+    font-size: 1.2rem;
 }
 
 #sidebar-wrapper .list-group {
-  width: 15rem;
+    width: 15rem;
 }
 
 #page-content-wrapper {
-  min-width: 100vw;
+    min-width: 100vw;
 }
 
 #wrapper.toggled #sidebar-wrapper {
-  margin-left: 0;
+    margin-left: 0;
+}
+
+#btn-dark-mode {
+    top: -2rem;
+}
+
+#btn-bottom {
+    height: 4%;
 }
 
 @media (min-width: 769px) {
-  #sidebar-wrapper {
-    margin-left: 0;
-  }
-  #page-content-wrapper {
-    min-width: 0;
-    width: 100%;
-  }
-  #wrapper.toggled #sidebar-wrapper {
-    margin-left: -15rem;
-  }
-  #hide-sidebar {
-    display: block;
-  }
-  #show-sidebar {
-    display: none;
-  }
+    #sidebar-wrapper {
+        margin-left: 0;
+    }
+    #page-content-wrapper {
+        min-width: 0;
+        width: 100%;
+    }
+    #wrapper.toggled #sidebar-wrapper {
+        margin-left: -15rem;
+    }
+    #hide-sidebar {
+        display: block;
+    }
+    #show-sidebar {
+        display: none;
+    }
 }
 
 @media (max-width: 768px) {
-  #hide-sidebar {
-    display: none;
-  }
-  #show-sidebar {
-    display: block;
-  }
+    #hide-sidebar {
+        display: none;
+    }
+    #show-sidebar {
+        display: block;
+    }
 }
 
 .content_app {
-  padding: 2rem 3rem 5rem 3rem;
-  overflow-y: scroll;
+    padding: 2rem 3rem 5rem 3rem;
+    overflow-y: scroll;
 }
 
 .active {
-  color: $primary;
-  font-weight: bold;
-  border-color: $primary;
-  background-color: transparent;
+    color: $primary;
+    font-weight: bold;
+    border-color: $primary;
+    background-color: transparent;
 }
 
 .full-height {
-  height: 100%;
-  height: -moz-calc(100vh - 1vh);
-  height: -webkit-calc(100vh - 1vh);
-  height: -o-calc(100vh - 1vh);
-  height: calc(100vh - 1vh);
+    height: 100%;
+    height: -moz-calc(100vh - 1vh);
+    height: -webkit-calc(100vh - 1vh);
+    height: -o-calc(100vh - 1vh);
+    height: calc(100vh - 1vh);
 }
